clang/test/BSC/Negative/Trait/trait_redefinition/trait-redefinition-template.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait a<b>{}; // expected-note {{previous definition is here}}
_Trait a<b>{}; // expected-error {{redefinition of 'a' as different kind of symbol}}
